--- a/res/layout/rr_day_list_item.xml
+++ b/res/layout/rr_day_list_item.xml
@@ -3,9 +3,15 @@
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView android:text="TextView01" android:id="@+id/Count"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	<TextView android:text="TextView02" android:id="@+id/Date"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
-	<TextView android:text="TextView03" android:id="@+id/Total"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+		android:layout_width="wrap_content" 
+		android:layout_height="wrap_content"></TextView>
+	<LinearLayout android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:orientation="vertical">
+		<TextView android:text="TextView02" android:id="@+id/Date"
+			android:layout_width="fill_parent" android:layout_height="wrap_content"
+			android:textSize="15sp"
+			></TextView>
+		<TextView android:text="TextView03" android:id="@+id/Total"
+			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
+	</LinearLayout>
 </LinearLayout>
