--- a/res/layout/rr_editor.xml
+++ b/res/layout/rr_editor.xml
@@ -5,8 +5,12 @@
 
 	<ImageView android:layout_height="fill_parent" android:id="@+id/ReceiptView"
 		android:layout_width="fill_parent"></ImageView>
+	<ZoomControls android:id="@+id/ZoomControls01"
+		android:layout_above="@+id/ReceiptView" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:visibility="visible"></ZoomControls>
 	<TextView android:text="TextView01" android:id="@+id/TextView01"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"></TextView>
+	
 
 </RelativeLayout>
