--- a/res/layout/rr_takeshot.xml
+++ b/res/layout/rr_takeshot.xml
@@ -3,6 +3,7 @@
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.jhlee.rr.RRCameraPreview
+		android:id="@+id/rr_cam_preview"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:layout_alignParentLeft="true"
