--- a/res/layout/moneypad_dialog.xml
+++ b/res/layout/moneypad_dialog.xml
@@ -2,12 +2,12 @@
 <LinearLayout android:id="@+id/LinearLayout01"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.jhlee.zoomsample.RRMoneyView
+	<com.jhlee.rr.RRMoneyTextView
 		android:id="@+id/moneyview" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" text_size_in_160dpi="60">
-	</com.jhlee.zoomsample.RRMoneyView>
-	<com.jhlee.zoomsample.RRMoneyPad
+	</com.jhlee.rr.RRMoneyTextView>
+	<com.jhlee.rr.RRMoneyPad
 		android:id="@+id/moneypad" android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
-	</com.jhlee.zoomsample.RRMoneyPad>
+	</com.jhlee.rr.RRMoneyPad>
 </LinearLayout>
