--- a/res/layout/rr_homescreen.xml
+++ b/res/layout/rr_homescreen.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout android:id="@+id/rr_homescreen"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:background="@drawable/solid_white"
 	xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.jhlee.r2.R2TopicListView
+	<com.jhlee.rr.RRTopicListView
 		android:id="@+id/rr_topiclist"
 		android:layout_width="fill_parent" android:layout_height="fill_parent">
-	</com.jhlee.r2.R2TopicListView>
+	</com.jhlee.rr.RRTopicListView>
 </LinearLayout>
 
