ADDED: title bar for each view

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <drawable name="solid_white">#ffffffff</drawable>
     <drawable name="semitransparent_bg">#7f666666</drawable>
+    <drawable name="clr_transparent">#00ffffff</drawable>
 </resources>
