--- a/res/layout/rr_carousel_receipt_list.xml
+++ b/res/layout/rr_carousel_receipt_list.xml
@@ -1,7 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" android:layout_height="fill_parent">
 
-<com.jhlee.rr.RRCarouselFlowView android:id="@+id/carouselView"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	xmlns:android="http://schemas.android.com/apk/res/android">
-</com.jhlee.rr.RRCarouselFlowView>
+
+	<com.jhlee.rr.RRCarouselFlowView
+		android:id="@+id/carouselView" android:layout_width="fill_parent"
+		android:layout_height="fill_parent">
+	</com.jhlee.rr.RRCarouselFlowView>
+
+	<LinearLayout android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:orientation="horizontal"
+		android:background="@drawable/title_back" android:layout_marginLeft="2px"
+		android:layout_marginTop="2px" android:layout_marginRight="2px">
+
+	</LinearLayout>
+
+	<Button
+		android:id="@+id/back_button" 
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:background="@drawable/back_button_state"
+		android:layout_marginLeft="5px" android:layout_marginTop="4px">
+	</Button>
+	<Button android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:text="@string/daily"
+		android:layout_alignParentRight="true"
+		android:layout_marginRight="5px" android:layout_marginTop="4px"></Button>
+
+
+</RelativeLayout>
 
