--- a/res/layout/rr_receipt_detail.xml
+++ b/res/layout/rr_receipt_detail.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="fill_parent"
+<RelativeLayout
+	android:id="@+id/receipt_detail_layout" 
+	android:layout_width="fill_parent"
 	android:layout_height="fill_parent" android:background="@drawable/solid_white"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -8,21 +10,26 @@
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
 	</com.jhlee.rr.RRZoomView>
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:orientation="horizontal"
-		android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
-		android:baselineAligned="true" android:background="@drawable/semitransparent_bg">
+	<RelativeLayout android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:background="@drawable/title_back"
+		android:padding="2px" android:layout_marginLeft="2px"
+		android:layout_marginTop="2px">
+		<Button android:id="@+id/back_button" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:background="@drawable/back_button_state"
+			android:layout_alignParentLeft="true">
+		</Button>
 		<com.jhlee.rr.RRDateTextView android:id="@+id/rr_date"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			android:layout_weight="1"
-			>
+			android:layout_weight="1" android:layout_toRightOf="@+id/back_button">
 		</com.jhlee.rr.RRDateTextView>
 		<com.jhlee.rr.RRMoneyTextView android:id="@+id/rr_money_text_view"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:layout_weight="1"
+			android:layout_alignParentRight="true" 
 			>
 		</com.jhlee.rr.RRMoneyTextView>
-	</LinearLayout>
+	</RelativeLayout>
+
 </RelativeLayout>
 
 
