--- a/res/layout/rr_receipt_detail.xml
+++ b/res/layout/rr_receipt_detail.xml
@@ -1,35 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	android:id="@+id/receipt_detail_layout" 
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:background="@drawable/solid_white"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout android:id="@+id/receipt_detail_layout"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:background="@drawable/solid_white" xmlns:android="http://schemas.android.com/apk/res/android">
 
 
 	<com.jhlee.rr.RRZoomView android:id="@+id/rr_zoomview"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
 	</com.jhlee.rr.RRZoomView>
-	<RelativeLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:background="@drawable/title_back"
-		android:padding="2px"
-		>
-		<Button android:id="@+id/back_button" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:background="@drawable/back_button_state"
-			android:layout_alignParentLeft="true">
-		</Button>
-		<com.jhlee.rr.RRDateTextView android:id="@+id/rr_date"
-			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			android:layout_weight="1" android:layout_toRightOf="@+id/back_button">
-		</com.jhlee.rr.RRDateTextView>
-		<com.jhlee.rr.RRMoneyTextView android:id="@+id/rr_money_text_view"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:layout_alignParentRight="true" 
-			>
-		</com.jhlee.rr.RRMoneyTextView>
-	</RelativeLayout>
-
+	<Button android:id="@+id/back_button" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:background="@drawable/back_button_state"
+		android:layout_alignParentLeft="true">
+	</Button>
+	<TextView
+		android:id="@+id/date_view"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginRight="2px"
+		android:textSize="23.5sp"
+		android:textStyle="bold"
+		android:textColor="#ffffffff"
+		android:hint="Type money"
+		android:textColorHint="#ffffffff"
+		android:shadowRadius="2.0"
+		android:shadowColor="#ff000000"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentTop ="true"
+		android:gravity="right"
+	/>
+	<TextView
+		android:id="@+id/money_view"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="0px"
+		android:layout_marginRight="2px"
+		android:textSize="23.5sp"
+		android:textStyle="bold"
+		android:textColor="#ffffffff"
+		android:hint="Type money"
+		android:textColorHint="#ffffffff"
+		android:shadowRadius="2.0"
+		android:shadowColor="#ff000000"
+		android:layout_alignParentRight="true"
+		android:layout_below = "@id/date_view"
+		android:gravity="right"
+		android:padding="0px"
+	/>
+	
+	<Button android:layout_width="wrap_content" android:id="@+id/button_numpad"
+		android:layout_height="wrap_content" android:background="@drawable/numpad_button_state"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentBottom="true"></Button>
+	<Button android:id="@+id/button_date_pick" android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:background="@drawable/date_change_button_state"
+		android:layout_toLeftOf="@id/button_numpad"
+		android:layout_alignParentBottom="true"></Button>
 </RelativeLayout>
 
 
