--- a/res/layout/rr_receipt_detail.xml
+++ b/res/layout/rr_receipt_detail.xml
@@ -8,6 +8,12 @@
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
 	</com.jhlee.rr.RRZoomView>
+	<com.jhlee.rr.RRZoomButtonView
+		android:id="@+id/rr_zoombutton_view"
+		android:layout_width="wrap_content"
+		android:layout_height="fill_parent"
+		android:layout_alignParentRight="true"
+		/>
 	<Button android:id="@+id/back_button" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:background="@drawable/back_button_state"
 		android:layout_alignParentLeft="true">
