CHANGED: Implemented photo tagging

--- a/res/layout/rr_carousel_receipt_list.xml
+++ b/res/layout/rr_carousel_receipt_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/rr_receipt_carousel_list"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
 
 
@@ -27,8 +28,14 @@
 	<Button android:id="@+id/button_tag" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:background="@drawable/tag_button_state"
 		android:layout_toLeftOf="@id/button_date_pick"
+
 		android:layout_alignParentBottom="true"></Button>
 
+	<com.jhlee.rr.RRTagBox android:id="@+id/tag_box"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:visibility="invisible"
+		android:layout_alignParentBottom="true"
+		/>
 
 </RelativeLayout>
 
