--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,4 +3,5 @@
     <drawable name="solid_white">#ffffffff</drawable>
     <drawable name="semitransparent_bg">#7f666666</drawable>
     <drawable name="clr_transparent">#00ffffff</drawable>
+    <drawable name="semi_gray">#aa333333</drawable>
 </resources>
