--- a/res/layout/rr_homescreen.xml
+++ b/res/layout/rr_homescreen.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout android:id="@+id/rr_homescreen"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:background="@drawable/solid_white"
+	android:background="#ffcccccc"
 	xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.jhlee.rr.RRTopicListView
-		android:id="@+id/rr_topiclist"
-		android:layout_width="fill_parent" android:layout_height="fill_parent">
-	</com.jhlee.rr.RRTopicListView>
+	<ListView
+		android:id="@+id/topic_list"
+		android:layout_width = "fill_parent"
+		android:layout_height="fill_parent"
+		android:cacheColorHint="#00000000"
+		/>
 </LinearLayout>
 
