--- a/res/layout/rr_chart_bar_graph.xml
+++ b/res/layout/rr_chart_bar_graph.xml
@@ -10,7 +10,17 @@
 		android:shadowColor="#ff000000" android:shadowRadius="2.0"
 		android:background="@drawable/bar_chart_title_gradient"
 		android:paddingLeft="4.5sp" android:inputType="textMultiLine" />
-	<LinearLayout android:orientation="horizontal"
+	<TextView android:id="@+id/empty_view" android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:text="BarGraph"
+		android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff"
+		android:shadowColor="#ff000000" android:shadowRadius="2.0"
+		android:background="@drawable/bar_chart_title_gradient"
+		android:paddingLeft="4.5sp" android:inputType="textMultiLine"
+		android:visibility="gone" 
+		/>
+	<LinearLayout
+		android:id="@+id/graph_wrapper" 
+		android:orientation="horizontal"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:minHeight="150px">
 		<com.jhlee.rr.RRChartYAxisView
